first production push

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>rishbh.me</title>
+    <title>rishbh.info</title>
 </head>
 
 
 <body>
     <header>
-        <img src="img/logo.png" alt="rishbh logo" class="logo">
+        <img src="img/logo.svg" alt="rishbh logo" class="logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Photography</a></li>
-                <li><a href="">Resume</a></li>
+                <li><a href="https://github.com/rishbhr">Projects</a></li>
+                <li><a href="https://www.instagram.com/certainty.peace/">Photography</a></li>
+                <li><a href="rishbh_resume.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -24,9 +23,9 @@
     <section class="upper-intro">
         <div class="container">
             <h1 class="title-text">Who is Rishbh Rana?
-                <span>Web Developer, Software Engineer, Photographer, Automobile Fanatic</span>
+                <span>Web Developer, Software Engineer, and Photographer</span>
             </h1>
-            <a href="projects.html" class="button button-accent">My Projects</a>
+            <a href="https://github.com/rishbhr" class="button button-accent">My Projects</a>
         </div>
     </section>
 
@@ -45,84 +44,31 @@
 
         <!--portfolio items-->
         <figure class="port-item">
-            <img src="" alt="portfolio item">
+            <img src="img/sbts.jpg" alt="portfolio item">
             <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
+                <p>Distributed Systems Web App, based on Java, Jsp, HTML & CSS.</p>
+                <a href="https://github.com/rishbhr/distributedSystem" class="button button-accent button-small">See project on Github</a>
             </figcaption>
         </figure>
 
         <!--portfolio items-->
         <figure class="port-item">
-            <img src="" alt="portfolio item">
+            <img src="img/dbms.jpg" alt="portfolio item">
             <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
+                <p>Inventory Management System based on PHP, MySQL, HTML & CSS</p>
+                <a href="https://github.com/rishbhr/databaseManagement" class="button button-accent button-small">See project on Github</a>
             </figcaption>
         </figure>
 
         <!--portfolio items-->
         <figure class="port-item">
-            <img src="" alt="portfolio item">
+            <img src="img/sbts.jpg" alt="portfolio item">
             <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
+                <p>Distributed Systems Web App, based on Java, Jsp, HTML & CSS.</p>
+                <a href="https://github.com/rishbhr/distributedSystem" class="button button-accent button-small">See project on Github</a>
             </figcaption>
         </figure>
 
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
-
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
-
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
-
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
-
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
-
-        <!--portfolio items-->
-        <figure class="port-item">
-            <img src="" alt="portfolio item">
-            <figcaption class="port-desc">
-                <p>Project Title</p>
-                <a href="" class="button buton-accent button-small">See project on Github</a>
-            </figcaption>
-        </figure>
     </section>
 
     <section class="cta">
@@ -130,26 +76,8 @@
             <h1 class="title-text title-cta">More to come!
                 <span>Currently looking for opportunities!</span>
             </h1>
-            <a href="" class="button button-dark">Contact!</a>
+            <a href="mailto:rishbhr@gmail.com" class="button button-dark">Contact!</a>
         </div>
     </section>
-
-    <footer>
-        <div class="container">
-            <div class="col-3">
-                <p>Some text goes here</p>
-                <div class="col-1">
-                    <ul class="unstyled-list">
-                        <li><strong>Home</strong></li>
-                        <li>Projects</li>
-                        <li>Resume</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-
 </body>
 </html>
