content changes, KIMPS update 0.1

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <figure class="port-item">
             <img src="img/sbts.jpg" alt="portfolio item">
             <figcaption class="port-desc">
-                <p>Distributed Systems Web App, based on Java, Jsp, HTML & CSS.</p>
-                <a href="https://github.com/rishbhr/distributedSystem" class="button button-accent button-small">See project on Github</a>
+                <p>Coming Soon! Web based photo management system. KIMPS</p>
             </figcaption>
         </figure>
 
